# meow

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
assets/: big_test.lua  huge_file.lua
scripts/: generator.lua
src/: lua.rs  main.rs  util.rs
src/cli/: args.rs
src/nvim/: config.rs  handler.rs
src/nvim/conf/: extract_hl.lua
src/util/: mod.rs  path.rs  validate.rs
