[package]
name = "rmeow"
version = "2.0.1"
edition = "2024"
description = "A command line tool that aims to be a replacement for cat/bat with better highlighting"
license = "MIT"
repository = "https://github.com/datsfilipe/meow"
keywords = ["cat", "neovim", "cli", "syntax-highlighting", "bat"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "meow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
term_size = "0.3" 

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
